Changed Jumbotron Image

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ header .light-logo {
 /* Jumbotron Section */
 
 .jumbotron-section {
-    background: rgba(0, 0, 0, 0) url("http://i67.tinypic.com/fnvgb4.jpg") no-repeat fixed 0 0 / cover;
+    background: rgba(0, 0, 0, 0) url("http://i67.tinypic.com/ml17kh.jpg") no-repeat fixed 0 0 / cover;
     height: 100%;
     position: relative;
 
