--- a/style.css
+++ b/style.css
@@ -888,7 +888,7 @@ header .light-logo {
 /* Footer Section */
 
 .footer {
-  background-color: #f7f7f7;
+  background-color: #232929;
   width: 100%;
   text-align: left;
   font-family: sans-serif;
@@ -896,6 +896,7 @@ header .light-logo {
   font-size: 16px;
   padding: 50px;
   border-top:1px solid #d3d3d3;
+  padding-bottom:250px;
   
 }
 
@@ -916,7 +917,7 @@ header .light-logo {
 
 .footer .about {
   line-height: 20px;
-  color: #7f858f;
+  color: #fff;
   font-family:'open sans','sans-serif';
   font-size: 13px;
   font-weight: normal;
@@ -925,7 +926,7 @@ header .light-logo {
 
 .footer .about span {
   display: block;
-  color: #232929;
+  color: #fff;
   font-family:'open sans', 'sans-serif';
   font-size: 18px;
   font-weight: 600;
@@ -959,7 +960,7 @@ header .light-logo {
 }
 .footer-center .center-header   {
 display: block;
-  color: #232929;
+  color: #fff;
   font-family:'open sans', 'sans-serif';
   font-size: 18px;
   font-weight: 600;
@@ -990,7 +991,7 @@ display: block;
 
 .footer .footer-center p {
   display: inline-block;
-  color: #232929;
+  color: #fff;
   vertical-align: middle;
   margin: 0;
 }
@@ -1003,7 +1004,7 @@ display: block;
 }
 
 .footer .footer-center p a {
-  color: #232929;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -1017,7 +1018,7 @@ display: block;
 
 .footer .footer-right .right-header {
     display: block;
-  color: #232929;
+  color: #fff;
   font-family:'open sans', 'sans-serif';
   font-size: 18px;
   font-weight: 600;
@@ -1032,7 +1033,7 @@ display: block;
   display: inline-block;
   line-height: 1.8;
   text-decoration: none;
-  color: #232929;
+  color: #fff;
   font-size:16px;
 }
 
@@ -1041,7 +1042,7 @@ display: block;
 }
 
 .footer .name {
-  color: #888;
+  color: #fff;
   font-size: 14px;
   font-weight: normal;
   margin: 0;
